--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -2,6 +2,8 @@
 # Set parameters here that may be different on each deployment target of the app, e.g. development, staging, production.
 # http://symfony.com/doc/current/best_practices/configuration.html#infrastructure-related-configuration
 parameters:
+    anonymous_ftp_user: anonymous
+    anonymous_ftp_pass: user@domain.tld
     hostname: ~
     # A unique name for this Pelagos instance
     pelagos_name: ~
