--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -37,6 +37,7 @@ framework:
         # handler_id set to null will use default session handler from php.ini
         handler_id:  ~
         save_path:   "%kernel.root_dir%/../var/sessions/%kernel.environment%"
+        storage_id: session.storage.filesystem
     fragments:       ~
     http_method_override: true
     assets: ~
