added utility class to generate ISO 19115-2 XML string from dataset

--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -63,6 +63,9 @@ services:
 
     pelagos.util.metadata:
         class: Pelagos\Util\Metadata
+        arguments:
+            - "@pelagos.entity.handler"
+            - "@twig"
 
     pelagos.util.data_store:
         class: Pelagos\Util\DataStore
