--- a/src/Pelagos/Bundle/AppBundle/Resources/config/routing_api.yml
+++ b/src/Pelagos/Bundle/AppBundle/Resources/config/routing_api.yml
@@ -104,4 +104,4 @@ national_data_center:
     type: rest
     resource: Pelagos\Bundle\AppBundle\Controller\Api\NationalDataCenterController
     name_prefix: national_data_center_
-    prefix: national_data_center
+    prefix: national-data-center
