Added NationalDataCenter entity to the audit list and removed the migration without entity audit

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -140,6 +140,7 @@ simple_things_entity_audit:
         - Pelagos\Entity\Dataset
         - Pelagos\Entity\DIF
         - Pelagos\Entity\DatasetSubmission
+        - Pelagos\Entity\NationalDataCenter
 
 fos_js_routing:
     routes_to_expose: [ .* ]
