--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -141,6 +141,7 @@ simple_things_entity_audit:
         - Pelagos\Entity\DIF
         - Pelagos\Entity\DatasetSubmission
         - Pelagos\Entity\NationalDataCenter
+        - Pelagos\Entity\DistributionPoint
 
 fos_js_routing:
     routes_to_expose: [ .* ]
