remove distpoint migration, move boolean, annotation, hateoas to NationalDataCenter

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -140,8 +140,7 @@ simple_things_entity_audit:
         - Pelagos\Entity\Dataset
         - Pelagos\Entity\DIF
         - Pelagos\Entity\DatasetSubmission
-        - Pelagos\Entity\NationalDataCenter
-        - Pelagos\Entity\DistributionPoint
+        - Pelagos\Entity\DataCenter
 
 fos_js_routing:
     routes_to_expose: [ .* ]
