--- a/src/Pelagos/Bundle/AppBundle/Resources/config/routing_api.yml
+++ b/src/Pelagos/Bundle/AppBundle/Resources/config/routing_api.yml
@@ -105,3 +105,9 @@ national_data_center:
     resource: Pelagos\Bundle\AppBundle\Controller\Api\NationalDataCenterController
     name_prefix: national_data_center_
     prefix: national-data-center
+
+data_center:
+    type: rest
+    resource: Pelagos\Bundle\AppBundle\Controller\Api\DataCenterController
+    name_prefix: data_center_
+    prefix: data-center
