Updated composer n fixed user deprecated issue

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -36,6 +36,7 @@ security:
                 provider: person_token
 
         main:
+            logout_on_user_change: true
             # allow anonymous access
             anonymous: ~
             # use REMOTE_USER environment variable if set
