--- a/composer.json
+++ b/composer.json
@@ -51,7 +51,7 @@
         "doctrine/doctrine-migrations-bundle": "^1.2",
         "egulias/email-validator": "^1.2",
         "php-http/httplug-bundle": "^1.10",
-        "php-http/guzzle6-adapter": "^1.1",
+        "php-http/guzzle6-adapter": "^1.1"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
