--- a/src/Pelagos/Bundle/AppBundle/Resources/config/services.yml
+++ b/src/Pelagos/Bundle/AppBundle/Resources/config/services.yml
@@ -59,8 +59,10 @@ services:
 
     pelagos.doctrine.dataset.listener:
         class: Pelagos\Event\DoctrineDatasetListener
+        arguments: ["@twig", "@mailer", "@security.token_storage", "%mailer_from_addr%", "%mailer_from_name%", "@pelagos.entity.handler", "@old_sound_rabbit_mq.doi_issue_producer"]
         tags:
             - { name: doctrine.event_listener, event: onFlush }
+            - { name: kernel.event_listener, event: pelagos.entity.dataset.deleted, method: onDeleted }
 
     pelagos.form.type.dif:
         class: Pelagos\Bundle\AppBundle\Form\DIFType
