--- a/.travis.yml
+++ b/.travis.yml
@@ -1,26 +1,59 @@
+# Project language
 language: php
 
-dist: trusty
+# Allows use container-based infrastructure
 sudo: false
 
-git:
-    depth: 1
-
-env:
-    global:
-        - MIN_PHP=7.1.3
-
-matrix:
-    include:
-        - php: 7.1
-        - php: 5.6
-        - php: 7.2
-
-    fast_finish: true
-
-cache:
-    directories:
-        - .phpunit
-
+# Start services
 services:
-    - rabbitmq
+  - postgresql
+  - rabbitmq
+
+# Customize addons
+addons:
+  postgresql: 9.6
+  apt:
+    packages:
+    - postgresql-9.6-postgis-2.3
+
+# Cache composer packages so "composer install" is faster
+cache:
+  directories:
+    - $HOME/.composer/cache/files
+
+# Matrix to test in every php version
+matrix:
+  # Fast finish allows to set the build as "finished" even if the "allow_failures" matrix elements are not finished yet.
+  fast_finish: true
+  include:
+    - php: 5.6
+    - php: 7.0
+    - php: 7.2
+  allow_failures:
+    - php: 7.2
+
+# Define an environment variable
+env:
+  - SYMFONY_VERSION="3.4.*" DB=postgresql
+
+# Update composer
+before-install:
+  - composer self-update
+
+# Install composer dependencies,
+# Create database, schema and fixtures
+install:
+  - composer install
+  - cp app/config/parameters.yml.dist app/config/parameters.yml
+  - php bin/console doctrine:database:create --env=test
+  - php bin/console doctrine:schema:create --env=test
+  - php bin/console doctrine:fixtures:load -n --env=test
+
+# Create db before running script
+before_script:
+  - psql -c 'create database travis_ci_test;' -U postgres
+  - psql -U postgres -c "create extension postgis"
+
+# Run script
+script:
+  - phpunit
