--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,7 @@ cache:
 # Matrix to test in every php version
 matrix:
   # Fast finish allows to set the build as "finished" even if the "allow_failures" matrix elements are not finished yet.
+  OS_TYPE=centos OS_VERSION=7
   fast_finish: true
   include:
     - php: 5.6
@@ -43,8 +44,8 @@ before-install:
 # Install composer dependencies,
 # Create database, schema and fixtures
 install:
-  - composer install
   - cp app/config/parameters.yml.dist app/config/parameters.yml
+  - composer install
   - php bin/console doctrine:database:create --env=test
   - php bin/console doctrine:schema:create --env=test
   - php bin/console doctrine:fixtures:load -n --env=test
