--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -75,8 +75,8 @@ parameters:
     issue_tracking_base_url: ~
 
     # Google OAuth client id and secret used by HWIOAuthBundle.
-    google_oauth_client_id: ~
-    google_oauth_client_secret: ~
+    google_oauth_client_id: 'someclientid'
+    google_oauth_client_secret: 'someclientsecret'
 
     download_base_directory: /san/home/http/download
     download_base_url: ~
