--- a/app/config/parameters_drupal_dev.yml.dist
+++ b/app/config/parameters_drupal_dev.yml.dist
@@ -1,3 +1,3 @@
 parameters:
     # The URL prefix for the drupal_dev environment (with no preceding or trailing slashes)
-    pelagos.prefix: ~
+    pelagos.prefix: drupal_dev_prefix
