--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -10,8 +10,8 @@ parameters:
 
     database_host:     127.0.0.1
     database_port:     5432
-    database_name:     gomri
-    database_user:     gomri_user
+    database_name:     pelagos
+    database_user:     postgres
     database_password: ~
     # You should uncomment this if you want use pdo_sqlite
     # database_path: "%kernel.root_dir%/data.db3"
