--- a/.travis.yml
+++ b/.travis.yml
@@ -39,7 +39,7 @@ env:
 # Update composer
 before-install:
   - sudo apt-get update
-  - psql -c 'create database travis_ci_test;' -U postgres
+  - psql -c 'create database pelagos;' -U postgres
   - psql -U postgres -c "create extension postgis"
 
 
