--- a/.travis.yml
+++ b/.travis.yml
@@ -28,8 +28,10 @@ matrix:
   fast_finish: true
   include:
     - php: 5.6
+    - php: 7.1
     - php: 7.2
   allow_failures:
+    - php: 7.1
     - php: 7.2
 
 # Define an environment variable
