--- a/.travis.yml
+++ b/.travis.yml
@@ -27,12 +27,19 @@ matrix:
   # Fast finish allows to set the build as "finished" even if the "allow_failures" matrix elements are not finished yet.
   fast_finish: true
   include:
-    - php: 5.6
-    - php: 7.1
-    - php: 7.2
-  allow_failures:
-    - php: 7.1
-    - php: 7.2
+    - name: "5.6 CentOs7"
+      php: 5.6
+      distribution: centos
+      version: 7
+    # - php: 7.1
+    # - php: 7.2
+  # allow_failures:
+  #  - php: 7.1
+  #  - php: 7.2
+    - name: "5.6 Ubuntu"
+      php: 5.6
+      distribution: ubuntu
+      version: trusty
 
 # Define an environment variable
 env:
@@ -41,6 +48,10 @@ env:
 # Update composer
 before-install:
   - sudo apt-get update
+  
+  - 'sudo docker pull ${distribution}:${version}'
+  - 'sudo docker build --no-cache --rm --file=travis/Dockerfile.${distribution}-${version} --tag=${distribution}-${version}:ansible travis'
+  
   - cp app/config/parameters.yml.dist app/config/parameters.yml
   - psql -c 'create database postgres' -U postgres
   - psql -c 'create extension postgis' -U postgres -d postgres
@@ -50,6 +61,16 @@ before-install:
 # Install composer dependencies,
 # Create database, schema and fixtures
 install:
+  - container_id=$(mktemp)
+  - 'sudo docker run --detach --privileged -v /sys/fs/cgroup:/sys/fs/cgroup:ro --volume="${PWD}":/etc/ansible/roles/nginx_role:ro ${distribution}-${version}:ansible > "${container_id}"'
+  - 'sudo docker exec "$(cat ${container_id})" env ANSIBLE_FORCE_COLOR=1 ansible-playbook -v /etc/ansible/roles/nginx_role/travis/test.yml --syntax-check'
+  - 'sudo docker exec "$(cat ${container_id})" env ANSIBLE_FORCE_COLOR=1 ansible-playbook -v /etc/ansible/roles/nginx_role/travis/test.yml'
+  - >
+    sudo docker exec "$(cat ${container_id})" env ANSIBLE_FORCE_COLOR=1 ansible-playbook -v /etc/ansible/roles/nginx_role/travis/test.yml
+    | grep -q 'changed=0.*failed=0'
+    && (echo 'Idempotence test: pass' && exit 0)
+    || (echo 'Idempotence test: fail' && exit 1)
+  - 'sudo docker rm -f "$(cat ${container_id})"'
   - export SYMFONY_ENV=drupal_dev
   - composer install 
  
