--- a/.travis.yml
+++ b/.travis.yml
@@ -22,35 +22,34 @@ cache:
   directories:
     - $HOME/.composer/cache/files
 
-# Matrix to test in every php version
+# Matrix to test in every php & OS version
 matrix:
   # Fast finish allows to set the build as "finished" even if the "allow_failures" matrix elements are not finished yet.
   fast_finish: true
   include:
+    - name: "5.6 Centos6"
+      php: 5.6
+      distribution: centos
+      version: 6
     - name: "5.6 Centos7"
       php: 5.6
       distribution: centos
       version: 7
-    # - php: 7.1
-    # - php: 7.2
-  # allow_failures:
-  #  - php: 7.1
-  #  - php: 7.2
-    - name: "5.6 Ubuntu"
-      php: 5.6
-      distribution: ubuntu
-      version: trusty
-    allows_failures:
-      - name: "7.2 Centos7"
-        php: 7.2
-        distribution: centos
-        version: 7
+    - name: "7.1 Centos6"
+      php: 7.1
+      distribution: centos
+      version: 6
+    - name: "7.1 Centos7"
+      php: 7.1
+      distribution: centos
+      version: 7
 
 # Define an environment variable
 env:
   - SYMFONY_VERSION="3.4.*" DB=postgresql
 
 # Update composer
+# Create database
 before-install:
   - sudo apt-get update
 
@@ -66,7 +65,7 @@ before-install:
 
 
 # Install composer dependencies,
-# Create database, schema and fixtures
+# Create schema and fixtures
 install:
   - export SYMFONY_ENV=drupal_dev
   - composer install 
