Added PHPCS version check.

--- a/.travis.yml
+++ b/.travis.yml
@@ -67,6 +67,7 @@ install:
 before-script:
   - php bin/console doctrine:schema:create 
   - php bin/console doctrine:fixtures:load 
+  - phpcs --version
   
 # Run script
 script:
