--- a/.travis.yml
+++ b/.travis.yml
@@ -62,7 +62,9 @@ before-install:
 # Create schema and fixtures
 install:
   - export SYMFONY_ENV=drupal_dev
-  - composer install 
+  - composer install
+  # Install PHPCS
+  - composer global require "squizlabs/php_codesniffer 2.*"
  
 before-script:
   - php bin/console doctrine:schema:create 
