--- a/.travis.yml
+++ b/.travis.yml
@@ -53,14 +53,14 @@ before-install:
   - cp app/config/parameters.yml.dist app/config/parameters.yml
   - psql -c 'create database postgres' -U postgres
   - psql -c 'create extension postgis' -U postgres -d postgres
-  
+
+  - pear install pear/PHP_CodeSniffer 2.5.0
+  - phpenv rehash
  
 
 # Install composer dependencies,
 # Create schema and fixtures
 install:
-  - pear install pear/PHP_CodeSniffer
-  - phpenv rehash
   - export SYMFONY_ENV=drupal_dev
   - composer install
  
@@ -73,7 +73,7 @@ before-script:
 # Run script
 script:
   - phpunit
-  - phpcs --standard=ruleset.xml --extensions=php -n -s .
+  - phpcs --standard=ruleset.xml --colors --ignore=bak --extensions=php .
   
 notifications:
   email: false
