--- a/.travis.yml
+++ b/.travis.yml
@@ -57,7 +57,7 @@ before-install:
 # Install composer dependencies,
 # Create schema and fixtures
 install:
-  - composer global require "squizlabs/php_codesniffer 2.5.0"
+  - pear install pear/PHP_CodeSniffer 2.5.0
   - export SYMFONY_ENV=drupal_dev
   - composer install
   - phpenv rehash
