--- a/.travis.yml
+++ b/.travis.yml
@@ -57,8 +57,7 @@ before-install:
 # Install composer dependencies,
 # Create schema and fixtures
 install:
-  - composer global require "squizlabs/php_codesniffer 2.5.0"
-  # - pear install pear/PHP_CodeSniffer 2.5.0
+  - pear install pear/PHP_CodeSniffer-2.5.0
   - export SYMFONY_ENV=drupal_dev
   - composer install
   - phpenv rehash
@@ -71,7 +70,7 @@ before-script:
 # Run script
 script:
   - phpunit
-  - $(pwd)/vendor/bin/phpcs --standard=GRIIDC --colors --ignore=bak --extensions=php .
+  - phpcs --standard=GRIIDC --colors --ignore=bak --extensions=php .
   
 notifications:
   email: false
