Only GCS src folder.

--- a/.travis.yml
+++ b/.travis.yml
@@ -70,7 +70,7 @@ before-script:
 # Run script
 script:
   - phpunit
-  - phpcs --standard=GRIIDC --colors --ignore=bak --extensions=php .
+  - phpcs --standard=GRIIDC --colors --ignore=bak --extensions=php ./src
   
 notifications:
   email: false
