--- a/.travis.yml
+++ b/.travis.yml
@@ -27,8 +27,8 @@ matrix:
   # Fast finish allows to set the build as "finished" even if the "allow_failures" matrix elements are not finished yet.
   fast_finish: true
   include:
-    - name: "5.6 Centos6"
-      php: 5.6
+    - name: "7.1 Centos6"
+      php: 7.1
       distribution: centos
       version: 6
     - name: "7.1 Centos7"
@@ -69,7 +69,7 @@ before-script:
 # Run script
 script:
   - phpunit
-  - phpcs --standard=ruleset.xml --colors --ignore=bak --extensions=php -n -s ./src
+  - phpcs --standard=. --colors --ignore=bak --extensions=php -n -s ./src
   
 notifications:
   email: false
