Upgraded fos/elastica to 5.x

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -246,7 +246,7 @@ fos_elastica:
             index_name: "%pelagos_name%"
             types:
                 dataset:
-                    mappings:
+                    properties:
                         udi: ~
                         title: { boost: 3 }
                         abstract: ~
