--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -284,7 +284,7 @@ fos_elastica:
                             properties:
                                 doi: { boost: 3 }
                         geometry:
-                            type: 'string'
+                            type: 'text'
                             property_path: false
                         simpleGeometry:
                             type: 'geo_shape'
