--- a/src/Pelagos/Bundle/AppBundle/Resources/config/routing_ui.yml
+++ b/src/Pelagos/Bundle/AppBundle/Resources/config/routing_ui.yml
@@ -82,3 +82,5 @@ pelagos_national_data_center_ui:
 pelagos_side_by_side_ui:
     resource: Pelagos\Bundle\AppBundle\Controller\UI\SideBySideController
 
+pelagos_remotelyhosted_datasets_ui:
+    resource: Pelagos\Bundle\AppBundle\Controller\UI\RemotelyHostedDatasetsController
