--- a/.travis.yml
+++ b/.travis.yml
@@ -53,9 +53,10 @@ before-install:
 # Install composer dependencies,
 # Create schema and fixtures
 install:
-  - pear install pear/PHP_CodeSniffer-2.5.1
+  # pear install pear/PHP_CodeSniffer-2.5.1
   - export SYMFONY_ENV=drupal_dev
   - composer install
+  - composer global require "squizlabs/php_codesniffer=*"
   - phpenv rehash
  
 before-script:
@@ -65,7 +66,7 @@ before-script:
 # Run script
 script:
   - phpunit
-  - phpcs --standard=GRIIDC --colors --ignore=bak --extensions=php -n -s ./src
+  - ./vendor/bin/phpcs --standard=GRIIDC --colors --ignore=bak --extensions=php -n -s ./src
   
 notifications:
   email: false
