--- a/composer.json
+++ b/composer.json
@@ -54,7 +54,8 @@
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
         "symfony/phpunit-bridge": "^2.7",
-        "mockery/mockery": "dev-master"
+        "mockery/mockery": "dev-master",
+        "squizlabs/php_codesniffer" : "^2.5"
     },
     "scripts": {
         "post-install-cmd": [
