--- a/.travis.yml
+++ b/.travis.yml
@@ -56,7 +56,7 @@ install:
   # pear install pear/PHP_CodeSniffer-2.5.1
   - export SYMFONY_ENV=drupal_dev
   - composer install
-  # composer global require "squizlabs/php_codesniffer=*"
+  - composer global require "squizlabs/php_codesniffer=*"
   - phpenv rehash
  
 before-script:
@@ -70,7 +70,11 @@ script:
   - ls -a
   - cd vendor
   - ls -a
-  - cd phpcs
+  - cd ~./
+  - pwd
+  - ls -a
+  - cd ./home
+  - pwd
   - ls -a
   - ./vendor/phpcs/bin/ --standard=GRIIDC --colors --ignore=bak --extensions=php -n -s ./src
 
