--- a/.travis.yml
+++ b/.travis.yml
@@ -56,7 +56,7 @@ install:
   # pear install pear/PHP_CodeSniffer-2.5.1
   - export SYMFONY_ENV=drupal_dev
   - composer install
-  - composer global require "squizlabs/php_codesniffer=*"
+  - composer global require "squizlabs/php_codesniffer=2.5.*"
   - phpenv rehash
  
 before-script:
@@ -65,18 +65,8 @@ before-script:
   
 # Run script
 script:
-  # phpunit
-  - pwd
-  - ls -a
-  - cd vendor/bin
-  - ls -a
-  - cd /home/travis/.composer
-  - pwd
-  - ls -a
-  - cd vendor/bin
-  - pwd
-  - ls -a
-  # ./vendor/phpcs/bin/ --standard=GRIIDC --colors --ignore=bak --extensions=php -n -s ./src
+  - phpunit
+  - home/travis/.composer/bin/phpcs --standard=GRIIDC --colors --ignore=bak --extensions=php -n -s home/travis/build/griidc/pelagos/src/
 
   
 notifications:
