--- a/.travis.yml
+++ b/.travis.yml
@@ -65,7 +65,8 @@ before-script:
 # Run script
 script:
   - phpunit
-  - home/travis/.composer/vendor/bin/phpcs --standard=GRIIDC --colors --ignore=bak --extensions=php -n -s /home/travis/build/griidc/pelagos/src/
+  - cd /home/travis/.composer/vendor/bin
+  - phpcs --standard=GRIIDC --colors --ignore=bak --extensions=php -n -s /home/travis/build/griidc/pelagos/src/
 
   
 notifications:
