--- a/.travis.yml
+++ b/.travis.yml
@@ -63,15 +63,9 @@ before-script:
   
 # Run script
 script:
-  # phpunit
-  - pwd
-  - ls -a
-  - git clone -b 2.9 https://github.com/squizlabs/PHP_CodeSniffer.git
-  - pwd
-  - ls -a
-  - ./PHP_CodeSniffer/scripts/phpcs --standard=GRIIDC --colors --ignore=bak --extensions=php -n -s ./src/
-  - pwd
-  - ls -a
+  - phpunit
+  - git clone -b 3.0 https://github.com/squizlabs/PHP_CodeSniffer.git
+  - ./PHP_CodeSniffer/bin/phpcs --standard=GRIIDC --colors --ignore=bak --extensions=php -i -n -s ./src/
   
 notifications:
   email: false
