--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -116,3 +116,7 @@ services:
 
     pelagos.util.url_validation:
         class: Pelagos\Util\UrlValidation
+        
+    pelagos.security.login_form_authenticator:
+        class: Pelagos\Bundle\AppBundle\Security\LoginFormAuthenticator
+        autowire: true
